EMBCDFA-711 - partial commit

--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
@@ -56,8 +56,8 @@ If you're an Indigenous community or local government your process is different:
             height="15"
             width="15"
           />
-          &nbsp;&nbsp; {{ tabItem.label }}
-          <!--&nbsp;&nbsp; {{ tabItem.label != "Profile" ? tabItem.label + "(" + tabItem.count + ")" : tabItem.label }}-->
+          <!--&nbsp;&nbsp; {{ tabItem.label }}-->
+          &nbsp;&nbsp; {{ tabItem.label != "Profile" ? tabItem.label + "(" + tabItem.count + ")" : tabItem.label }}
         </a>
       </nav>
       <router-outlet></router-outlet>
