--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
@@ -85,7 +85,7 @@
                   <th mat-header-cell *matHeaderCellDef>
                     &nbsp;
                   </th>
-                  <td *matCellDef="let element" mat-cell>
+                  <td *matCellDef="let element; let index = index" mat-cell>
                     <button
                     class="delete-image"
                     mat-icon-button
