--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
@@ -42,7 +42,7 @@
                   <th mat-header-cell *matHeaderCellDef>
                     &nbsp;
                   </th>
-                  <td *matCellDef="let element" mat-cell>
+                  <td *matCellDef="let element; let index = index" mat-cell>
                     <button
                     class="delete-image"
                     mat-icon-button
@@ -137,7 +137,6 @@
                     </mat-form-field>
                   </div>
                 </div>
-                <!-- <button type="button" (click)="showFullTimeOccupantsForm()">Show Form</button> -->
 
                 <div class="row">
                   <div class="col-md-3">
@@ -230,7 +229,7 @@
                   <th mat-header-cell *matHeaderCellDef>
                     &nbsp;
                   </th>
-                  <td *matCellDef="let element" mat-cell>
+                  <td *matCellDef="let element; let index = index" mat-cell>
                     <button
                     class="delete-image"
                     mat-icon-button
@@ -453,7 +452,7 @@
                   <th mat-header-cell *matHeaderCellDef>
                     &nbsp;
                   </th>
-                  <td *matCellDef="let element" mat-cell>
+                  <td *matCellDef="let element; let index = index" mat-cell>
                     <button
                     class="delete-image"
                     mat-icon-button
