--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -13,20 +13,19 @@
               Is the damaged property address the same as the primary address that you listed on your profile?<span style="color:red" >*</span>
             </p>
             <mat-radio-group
-              [(ngModel)]="useProfileAddress"
-              [ngModelOptions]="{standalone: true}"
+              formControlName="isPrimaryAndDamagedAddressSame"
               class="primary-radio-group"
               (change)="onUseProfileAddressChoice($event)"
               required
               aria-label="Select an option">
-              <mat-radio-button value="0">Yes</mat-radio-button>
+              <mat-radio-button value=true>Yes</mat-radio-button>
               <div class="row radio-extra-label">
                 {{ profileAddress?.addressLine1}}<br/>
                 <div *ngIf="profileAddress?.addressLine2">{{ profileAddress?.addressLine2}}<br/></div>
                 {{ profileAddress?.community }}&nbsp;{{ profileAddress?.postalCode }}<br /><br/>
               </div>
-              <mat-radio-button value="1">No</mat-radio-button>
-              <div class="row radio-extra-label" *ngIf="useProfileAddress === '1'">
+              <mat-radio-button value=false>No</mat-radio-button>
+              <div class="row radio-extra-label" *ngIf="damagedPropertyAddressForm.get('isPrimaryAndDamagedAddressSame').value != 'true'">
                 <app-bc-address
                   [addressForm]="damagedPropertyAddressForm"
                   [primaryAddressWarning]="false"
