--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
@@ -334,7 +334,14 @@
                 <div class="row">
 
                   <div class="col-md-4">
-                    <div>
+                    <app-file-upload
+                    [noOfAttachments]="1"
+                    (attachedFile)="setCleanUpWorkFileFormControl($event)"
+                    [allowedFileTypes]="allowedFileTypes"
+                    allowedFileExtensionsList=".pdf,.jpg,.jpeg,.png"
+                  >
+                  </app-file-upload>
+                    <!-- <div>
                       <div
                         class="dropzone"
                         fileDragDrop
@@ -363,7 +370,7 @@
                           </div>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                     <br />
                   </div>
                   <div class="col-md-6">
