partial commit - max length validation

--- a/dfa/src/UI/embc-dfa/src/app/core/components/signature/signature.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/signature/signature.component.html
@@ -18,6 +18,13 @@
           [(ngModel)]="signatureBlock.signedName"
           placeholder="Print Name*"
         />
+        <!--<mat-error
+                *ngIf="
+                  signAndSubmitForm.applicantSignature.signedName.invalid &&
+                  signatureBlock.signedName.hasError('maxLength')
+                "
+                >Maximum length reached</mat-error
+              >-->
       </mat-form-field>
     </div>
   </div>
