--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -88,6 +88,14 @@
               >
                 First Nations Reserve Name is required</mat-error
               >
+              <mat-error
+                *ngIf="
+                  damagedPropertyAddressForm.get('firstNationsReserve').invalid &&
+                  damagedPropertyAddressForm.get('firstNationsReserve').hasError('maxLength')
+                "
+              >
+                Maximum length reached</mat-error
+              >
             </mat-form-field>
             <br/><br/><br/>
           </div>
