--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
@@ -19,6 +19,14 @@
         >
           Address Line 1 is required</mat-error
         >
+        <mat-error
+          *ngIf="
+            addressFormControl?.addressLine1.invalid &&
+            addressFormControl?.addressLine1.hasError('maxLength')
+          "
+        >
+          Maximum length reached</mat-error
+        >
       </mat-form-field>
     </div>
     <div class="col-md-1">
@@ -43,6 +51,14 @@
           maxlength="100"
           [readonly]="primaryAddressWarning == true"
         />
+        <mat-error
+          *ngIf="
+            addressFormControl?.addressLine2.invalid &&
+            addressFormControl?.addressLine2.hasError('maxLength')
+          "
+        >
+          Maximum length reached</mat-error
+        >
       </mat-form-field>
     </div>
   </div>
@@ -79,6 +95,14 @@
           City is required</mat-error
         >-->
         <!--<mat-error *ngIf="validateCity()"> City is invalid</mat-error>-->
+        <mat-error
+          *ngIf="
+            addressFormControl?.community.invalid &&
+            addressFormControl?.community.hasError('maxLength')
+          "
+        >
+          Maximum length reached</mat-error
+        >
       </mat-form-field>
     </div>
   </div>
@@ -94,6 +118,14 @@
           [readonly]="primaryAddressWarning == true"
           value="British Columbia"
         />
+        <mat-error
+          *ngIf="
+            addressFormControl?.stateProvince.invalid &&
+            addressFormControl?.stateProvince.hasError('maxLength')
+          "
+        >
+          Maximum length reached</mat-error
+        >
       </mat-form-field>
     </div>
   </div>
@@ -119,6 +151,14 @@
           "
         >
           Postal Code is invalid</mat-error
+        >
+        <mat-error
+          *ngIf="
+            addressFormControl?.postalCode.invalid &&
+            addressFormControl?.postalCode.hasError('maxLength')
+          "
+        >
+          Maximum length reached</mat-error
         >
       </mat-form-field>
     </div>
